Work on system service consumption